Ensure words break in results

--- a/app/assets/css/pagefind-search.css
+++ b/app/assets/css/pagefind-search.css
@@ -62,6 +62,7 @@
     border-color: var(--color-neutral-200);
     border-top-width: 1px;
     padding: calc(var(--spacing) * 3.5) 0 calc(var(--spacing) * 4);
+    word-break: break-word;
     &:last-of-type {
       border-bottom: none;
     }
